# python-project-lvl2

./: .flake8  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: tests-coverage.yml  tests-run.yml  tests.yml
gendiff/: __init__.py  cli.py  file_parser.py  formatter.py  formatters_list.py  gendiff.py  generate_diff.py  import_format.py  inner_format.py  parser.py  statuses.py  tree.py
gendiff/formatters/: formatters.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: 2test_diff.py  conftest.py  test_diff.py
tests/fixtures/: file1.json  file1_nested.json  file1_nested.yml  file2_nested.yml  help_output.txt  out_nested.yml  output.json  output.py  output_nested_plain_yml.txt
tests/fixtures/json_in/flat/plain/: output_r
tests/fixtures/json_in/flat/stylish/: output_r
tests/fixtures/json_in/nested/json/: output  output_r
tests/fixtures/json_in/nested/plain/: output_r
tests/fixtures/json_in/nested/stylish/: output_r
tests/fixtures/tmp/: output_flat_plain.txt
tests/fixtures/tmp/flat/: output_json  output_json_reversed
tests/fixtures/tmp/nested/: output_json
tests/fixtures/yaml_in/flat/plain/: output_r
tests/json_in_tests/: conftest.py  test_empty_inputs.py  test_empty_inputs_json.py  test_flat_inputs.py  test_flat_inputs_json.py  test_json_formatter_json.py  test_nested_inputs.py  test_nested_inputs_json.py
tests/unsupported_in/: conftest.py  test_unsupported_formats.py
tests/yaml_in_tests/: conftest.py  test_empty_inputs_yml.py  test_flat_inputs_yml.py  test_json_formatter_yaml.py  test_nested_inputs_yml.py
(+5 files in other folders)
